test_failure_7.txt
============================= test session starts =============================
platform win32 -- Python 3.13.5, pytest-8.4.1, pluggy-1.6.0
rootdir: D:\deep think\deep-think-evolving
configfile: pytest.ini
plugins: anyio-4.9.0, langsmith-0.4.4
collected 29 items / 2 errors

=================================== ERRORS ====================================
________________ ERROR collecting tests/test_main_pipeline.py _________________
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\Anaconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\test_main_pipeline.py:6: in <module>
    from main import run_pipeline
E     File "D:\deep think\deep-think-evolving\main.py", line 486
E       <<<<<<< HEAD
E       ^^
E   SyntaxError: invalid syntax
______________ ERROR collecting tests/test_strategy_pipeline.py _______________
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\Anaconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\test_strategy_pipeline.py:9: in <module>
    from main import run_pipeline, _build_mock_adapters
E     File "D:\deep think\deep-think-evolving\main.py", line 486
E       <<<<<<< HEAD
E       ^^
E   SyntaxError: invalid syntax
=========================== short test summary info ===========================
ERROR tests/test_main_pipeline.py
ERROR tests/test_strategy_pipeline.py
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!
============================== 2 errors in 9.12s ==============================
